# mgqpy

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_03a6f06dfdb7ce0800f1cd8369ffa45924e1b497_20240623_085848_uncommited-changes.json  0001_a7fc9ed2a212251a1657b810914e7f11e2438272_20240623_103840_uncommited-changes.json  0002_929d14e7d6bf53f7f1ae6d6311ae39a672eb46e1_20240623_111939.json  0003_a4d65511e197553de90914248becc3710977901b_20240623_211221.json  0004_c19f16ab9de167c60e982f7b42d99890306cc1d7_20240623_211626_uncommited-changes.json  0004_ce0f9eec1441ad6c5dfcca880a295186e76fa850_20240625_144610.json  0005_b8a887a45f0fd471772e41241d83734c16bef080_20240625_151514_uncommited-changes.json
.github/workflows/: test.yaml
mgqpy/: __init__.py  utils.py
mgqpy/operators/: all.py  and_or_nor.py  elem_match.py  eq_ne.py  eq_ne_not.py  gt.py  gte.py  in_nin.py  lt.py  lte.py  mod.py  regex.py  size.py
src/mgqpy/: __init__.py
src/mgqpy/operators/: eq_ne_not.py  gt.py  in_nin.py  lte.py
tests/: conftest.py  helpers.py  test_all.py  test_and.py  test_elem_match.py  test_eq.py  test_eq_mongoquery.py  test_gt.py  test_gte.py  test_in.py  test_lt.py  test_lte.py  test_mod.py  test_ne.py  test_nin.py  test_nor.py  test_not.py  test_or.py  test_python_types.py  test_regex.py  test_size.py  test_validate.py
