[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[project]
name = "mgqpy"
version = "0.8.0"
description = "mongo query as a predicate function"
authors = [{ name = "Chiawei Ong", email = "ongchiawei@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Home = "https://github.com/weiliddat/mgqpy"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["--benchmark-disable", "--benchmark-autosave"]

[tool.flit.sdist]
include = ["mgqpy/"]
exclude = ["tests/", "requirements-dev.txt", "compose.yml"]

[dependency-groups]
dev = [
    "pymongo>=4.15.5",
    "pytest>=9.0.2",
    "pytest-benchmark>=5.2.3",
    "pytest-cov>=7.0.0",
]
